[POCAM-57] fix searchbox on ie11 - with browser specific queries

--- a/html/themes/custom/common_design_subtheme/sass/pocam_custom/_home.scss
+++ b/html/themes/custom/common_design_subtheme/sass/pocam_custom/_home.scss
@@ -37,7 +37,11 @@
     transition: .3s ease;
     cursor: pointer;
     height: 42px;
-    width: 98%;
+    width: 100%;
+
+    @media all and (-ms-high-contrast: none) {
+      width: 98%;
+    }
 
     &::placeholder {
       color: $cd-dark-grey;
