--- a/html/themes/custom/common_design_subtheme/sass/pocam_custom/_main-content.scss
+++ b/html/themes/custom/common_design_subtheme/sass/pocam_custom/_main-content.scss
@@ -50,7 +50,10 @@
     transition: .3s ease;
     cursor: pointer;
     height: 42px;
-    width: 98%;
+    width: 100%;
+    @media all and (-ms-high-contrast: none) {
+      width: 98%;
+    }
 
     &::placeholder {
       color: $cd-dark-grey;
